--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,11 @@ include(cmake/config/options.cmake)
 
 # Fortran filesystem library "ffilesystem"
 find_package(ffilesystem 3.3.0 CONFIG)
+if(ffilesystem_VERSION VERSION_LESS 3.4.2)
+  target_link_libraries(ffilesystem::filesystem INTERFACE
+  $<$<AND:$<CXX_COMPILER_ID:GNU>,$<VERSION_LESS:${CMAKE_CXX_COMPILER_VERSION},9.1.0>>:stdc++fs>
+  )
+endif()
 # this is the first package we find, so make a special error message for users
 if(NOT ffilesystem_FOUND)
   message(FATAL_ERROR "
