--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,9 @@ jobs:
     strategy:
       matrix:
         msis2: [true, false]
-        hwm14: [true, false]
+        # hwm14: [true, false]
+        hwm14: [false]
+        # TODO: temp workaround for fclaw_prep3
         img: [{os: ubuntu-latest, cc: gcc-8, cxx: g++-8, fc: gfortran-8},
               {os: ubuntu-latest, cc: gcc, cxx: g++, fc: gfortran},
               {os: macos-latest, cc: clang, cxx: clang++, fc: gfortran-11}]
