--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -222,6 +222,12 @@ gemini3d
 ${gemini_internal_mods}
 )
 
+add_library(gemini3d_mpi_c libgemini_mpi_c.f90)
+target_link_libraries(gemini3d_mpi_c PRIVATE
+gemini3d_mpi
+${gemini_mpi_internal_mods}
+)
+
 if(cpp)
 
 # --- Gemini_c.bin
