--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,10 +37,10 @@ include(cmake/config/options.cmake)
 
 # Fortran filesystem library "ffilesystem"
 find_package(ffilesystem CONFIG)
-if(ffilesystem_VERSION VERSION_LESS 3.4.2)
-  target_link_libraries(ffilesystem::filesystem INTERFACE
-  $<$<AND:$<CXX_COMPILER_ID:GNU>,$<VERSION_LESS:${CMAKE_CXX_COMPILER_VERSION},9.1.0>>:stdc++fs>
-  )
+if(ffilesystem_VERSION VERSION_LESS 3.4.2 AND CMAKE_CXX_COMPILER_ID STREQUAL GNU AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.1.0)
+  #target_link_libraries(ffilesystem::filesystem INTERFACE stdc++fs)
+  # function target_link_libraries() should work, but doesn't (CMake bug?)
+  set_target_properties(ffilesystem::filesystem PROPERTIES INTERFACE_LINK_LIBRARIES stdc++fs)
 endif()
 # this is the first package we find, so make a special error message for users
 if(NOT ffilesystem_FOUND OR ffilesystem_VERSION VERSION_LESS 3.3.0)
