--- a/src/neutral/CMakeLists.txt
+++ b/src/neutral/CMakeLists.txt
@@ -18,7 +18,7 @@ target_compile_options(neutral_perturbations PRIVATE ${gfortran_opts})
 target_link_libraries(neutral_perturbations PRIVATE config const reader grid meshobj interp mpimod
 timeutils
 inputdata
-neutral neutraldata neutraldata3D_mpi
+neutral neutraldata neutraldata3D_mpi neutraldata3D_geog_mpi neutraldata3D_geom_mpi
 neutraldata2D neutraldata2Dcart neutraldata2Daxisymm
 h5fortran::h5fortran
 MPI::MPI_Fortran
