--- a/src/numerical/diffusion/CMakeLists.txt
+++ b/src/numerical/diffusion/CMakeLists.txt
@@ -21,22 +21,22 @@ $<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
 )
 
 # WORKING_DIRECTORY is needed to write output file to repeatable path.
-add_test(NAME unit:diffusion1
+add_test(NAME diffusion1
 COMMAND test_diffusion1d ${_tmpdifffn}
 WORKING_DIRECTORY ${PROJECT_BINARY_DIR}
 )
-set_tests_properties(unit:diffusion1 PROPERTIES
+set_tests_properties(diffusion1 PROPERTIES
 TIMEOUT 5
 LABELS unit
 FIXTURES_SETUP gemini_diffusion_fxt
 )
-dll_test_path("h5fortran::h5fortran;ZLIB::ZLIB;LAPACK::LAPACK" unit:diffusion1)
+dll_test_path("h5fortran::h5fortran;ZLIB::ZLIB;LAPACK::LAPACK" diffusion1)
 
 if(python)
-  add_test(NAME unit:diffusion1:python
+  add_test(NAME diffusion1:python
   COMMAND ${Python_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_diffusion1D.py ${_tmpdifffn}
   )
-  set_tests_properties(unit:diffusion1:python PROPERTIES
+  set_tests_properties(diffusion1:python PROPERTIES
   TIMEOUT 10
   LABELS "unit;python"
   REQUIRED_FILES ${_tmpdifffn}
