--- a/src/temporal/CMakeLists.txt
+++ b/src/temporal/CMakeLists.txt
@@ -11,16 +11,16 @@ if(BUILD_TESTING)
 
 add_executable(test_formats test_formats.f90)
 target_link_libraries(test_formats PRIVATE timeutils const)
-add_test(NAME unit:DateFormats COMMAND test_formats)
+add_test(NAME DateFormats COMMAND test_formats)
 
 add_executable(test_rollover test_dayrollover.f90)
 target_link_libraries(test_rollover PRIVATE timeutils const)
-add_test(NAME unit:DateRollover COMMAND test_rollover)
+add_test(NAME DateRollover COMMAND test_rollover)
 
 add_executable(test_sza test_sza.f90)
 target_link_libraries(test_sza PRIVATE timeutils const)
-add_test(NAME unit:SolarZenithAngle COMMAND test_sza)
+add_test(NAME SolarZenithAngle COMMAND test_sza)
 
-set_tests_properties(unit:DateFormats unit:DateRollover unit:SolarZenithAngle PROPERTIES LABELS unit TIMEOUT 10)
+set_tests_properties(DateFormats DateRollover SolarZenithAngle PROPERTIES LABELS unit TIMEOUT 10)
 
 endif()
