--- a/src/unit_tests/CMakeLists.txt
+++ b/src/unit_tests/CMakeLists.txt
@@ -12,11 +12,11 @@ endif()
 add_executable(test_mpi test_mpi.f90)
 target_link_libraries(test_mpi PRIVATE MPI::MPI_Fortran)
 
-add_test(NAME unit:mpi_basic
+add_test(NAME mpi_basic
 COMMAND COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} ${Ncpu} $<TARGET_FILE:test_mpi> ${Ncpu}
 )
 
-set_tests_properties(unit:mpi_basic PROPERTIES
+set_tests_properties(mpi_basic PROPERTIES
 TIMEOUT 30
 PROCESSORS ${Ncpu}
 FIXTURES_SETUP mpi_fxt
@@ -34,8 +34,8 @@ configure_file(test_scalapack.in.f90 test_scalapack.f90 @ONLY)
 add_executable(gemini_scalapack ${CMAKE_CURRENT_BINARY_DIR}/test_scalapack.f90)
 target_link_libraries(gemini_scalapack PRIVATE SCALAPACK::SCALAPACK LAPACK::LAPACK MPI::MPI_Fortran)
 
-add_test(NAME unit:scalapack COMMAND gemini_scalapack)
-set_tests_properties(unit:scalapack PROPERTIES
+add_test(NAME scalapack COMMAND gemini_scalapack)
+set_tests_properties(scalapack PROPERTIES
 TIMEOUT 15
 FIXTURES_REQUIRED mpi_fxt
 FIXTURES_SETUP scalapack_fxt
@@ -49,12 +49,12 @@ MUMPS::MUMPS
 )
 # same link logic applied to gemini.bin
 
-add_test(NAME unit:mumps_basic
+add_test(NAME mumps_basic
 COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 2 $<TARGET_FILE:test_mumps>
 WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-set_tests_properties(unit:mumps_basic PROPERTIES
+set_tests_properties(mumps_basic PROPERTIES
 TIMEOUT 15
 PROCESSORS 2
 RESOURCE_LOCK cpu_mpi
@@ -63,4 +63,4 @@ FIXTURES_REQUIRED scalapack_fxt
 FIXTURES_SETUP mumps_fxt
 )
 
-dll_test_path("SCALAPACK::SCALAPACK;MUMPS::MUMPS" "unit:scalapack;unit:mumps_basic")
+dll_test_path("SCALAPACK::SCALAPACK;MUMPS::MUMPS" "scalapack;mumps_basic")
