--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -32,8 +32,8 @@ target_link_libraries(magcalc.bin PRIVATE MPI::MPI_Fortran
 $<$<NOT:$<BOOL:${mpi}>>:MUMPS::MPISEQ>
 )
 
-add_test(NAME unit:magcalc_exe_ok COMMAND magcalc.bin)
-set_tests_properties(unit:magcalc_exe_ok PROPERTIES
+add_test(NAME magcalc_exe_ok COMMAND magcalc.bin)
+set_tests_properties(magcalc_exe_ok PROPERTIES
 PASS_REGULAR_EXPRESSION "EOF: magcalc.bin"
 LABELS unit
 TIMEOUT 10
@@ -82,8 +82,8 @@ if(CMAKE_Fortran_COMPILER_ID MATCHES "^Intel")
 else()
   set_target_properties(gemini3d.run PROPERTIES LINKER_LANGUAGE CXX)
 endif()
-add_test(NAME unit:gemini3d_run_ok COMMAND gemini3d.run)
-set_tests_properties(unit:gemini3d_run_ok PROPERTIES
+add_test(NAME gemini3d_run_ok COMMAND gemini3d.run)
+set_tests_properties(gemini3d_run_ok PROPERTIES
 PASS_REGULAR_EXPRESSION "EOF: gemini3d.run"
 FIXTURES_SETUP gemini_exe_fxt
 LABELS unit
@@ -106,15 +106,15 @@ if(CMAKE_Fortran_COMPILER_ID MATCHES "^Intel")
 else()
   set_target_properties(magcalc.run PROPERTIES LINKER_LANGUAGE CXX)
 endif()
-add_test(NAME unit:magcalc_run_ok COMMAND magcalc.run)
-set_tests_properties(unit:magcalc_run_ok PROPERTIES
+add_test(NAME magcalc_run_ok COMMAND magcalc.run)
+set_tests_properties(magcalc_run_ok PROPERTIES
 PASS_REGULAR_EXPRESSION "EOF: magcalc.run"
 LABELS unit
 TIMEOUT 10
 )
 
 # --- Windows needs DLLs on path
-dll_test_path("ffilesystem::filesystem;h5fortran::h5fortran;HDF5::HDF5" "unit:magcalc_exe_ok;unit:magcalc_run_ok;unit:gemini3d_run_ok")
+dll_test_path("ffilesystem::filesystem;h5fortran::h5fortran;HDF5::HDF5" "magcalc_exe_ok;magcalc_run_ok;gemini3d_run_ok")
 
 # --- Gemini compare
 add_library(assert OBJECT assert.f90)
