--- a/src/utils/hwloc/CMakeLists.txt
+++ b/src/utils/hwloc/CMakeLists.txt
@@ -24,8 +24,8 @@ if(HWLOC_FOUND)
     target_include_directories(test_hwloc PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
     target_link_libraries(test_hwloc PRIVATE HWLOC::HWLOC)
     # NOTE: MPIEXEC_MAX_NUMPROCS is fallible, it uses less robust methods than hwloc! Particularly on ARM (Raspberry Pi)
-    add_test(NAME unit:HWLOC COMMAND test_hwloc ${Ncpu})
-    set_tests_properties(unit:HWLOC PROPERTIES
+    add_test(NAME HWLOC COMMAND test_hwloc ${Ncpu})
+    set_tests_properties(HWLOC PROPERTIES
     FIXTURES_SETUP hwloc_fxt
     TIMEOUT 10
     PROCESSORS 1
