--- a/src/mpimod/CMakeLists.txt
+++ b/src/mpimod/CMakeLists.txt
@@ -26,8 +26,8 @@ if(BUILD_TESTING)
 add_executable(test_excess_mpi test_excess_mpi.f90)
 target_link_libraries(test_excess_mpi PRIVATE autogrid)
 
-add_test(NAME unit:mpi:excessCPU COMMAND test_excess_mpi)
-set_tests_properties(unit:mpi:excessCPU PROPERTIES
+add_test(NAME mpi:excessCPU COMMAND test_excess_mpi)
+set_tests_properties(mpi:excessCPU PROPERTIES
 TIMEOUT 10
 LABELS unit
 )
